--- a/ddp-workspace/projects/ddp-rgp/src/styles/_variables.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles/_variables.scss
@@ -1,3 +1,5 @@
 $color-teal: #0ea7b5;
 $color-blue-dark: #0c457d;
+$color-blue-light: #337ab7;
 $color-orange: #e8702a;
+$color-grey-light: #f1f1f1;
