rgp | adjust styles for different pages

--- a/ddp-workspace/projects/ddp-rgp/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/header/header.component.html
@@ -1,231 +1,22 @@
-<!-- <div class="header-container">
-  <app-page-banner></app-page-banner>
-
-  <header
-    class="row Header"
-    [ngClass]="{
-      'Header--home': inHome || inLGMD || inEligiblityCrit,
-      stick: isPageScrolled
-    }"
-  >
-    <nav class="navbar" role="navigation">
-      <div class="navbar-header Display--inline">
-        <a
-          class="navbar-brand Header-logo"
-          routerLink="/"
-          [attr.alt]="'Common.LogoAlt' | translate"
-        ></a>
-        <button
-          type="button"
-          class="navbar-toggle"
-          (click)="isCollapsed = !isCollapsed"
-          [attr.aria-expanded]="!isCollapsed"
-          aria-controls="rare-genomes-nav"
-        >
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <ul class="nav Header-menu">
-        <div
-          class="collapse navbar-collapse Display--inline"
-          id="rare-genomes-nav"
-          [collapse]="isCollapsed"
-        >
-          <li dropdown class="dropdown Hidden-mobile">
-            <a dropdownToggle class="Header-menuItem" translate
-              >Header.Families.Text<span class="caret"></span
-            ></a>
-            <div *dropdownMenu class="dropdown-menu">
-              <a
-                routerLink="/eligibility-criteria"
-                class="Header-subMenuItem"
-                translate
-                >Header.Families.Item1</a
-              >
-              <a routerLink="/how-it-works" class="Header-subMenuItem" translate
-                >Header.Families.Item2</a
-              >
-              <a
-                routerLink="/privacy-and-your-data"
-                class="Header-subMenuItem"
-                translate
-                >Header.Families.Item3</a
-              >
-              <a
-                routerLink="/for-your-physician"
-                class="Header-subMenuItem"
-                translate
-                >Header.Families.Item4</a
-              >
-            </div>
-          </li>
-
-          <li dropdown class="dropdown Hidden-mobile">
-            <a dropdownToggle class="Header-menuItem" translate
-              >Header.Researchers.Text<span class="caret"></span
-            ></a>
-            <div *dropdownMenu class="dropdown-menu">
-              <a routerLink="/data-sharing" class="Header-subMenuItem" translate
-                >Header.Researchers.Item1</a
-              >
-            </div>
-          </li>
-
-          <li dropdown class="dropdown Hidden-mobile">
-            <a dropdownToggle class="Header-menuItem" translate
-              >Header.Projects.Text<span class="caret"></span
-            ></a>
-            <div *dropdownMenu class="dropdown-menu">
-              <a
-                routerLink="/limb-girdle-muscular-dystrophy"
-                class="Header-subMenuItem"
-                translate
-                >Header.Projects.Item1</a
-              >
-              <a routerLink="/craniofacial" class="Header-subMenuItem" translate
-                >Header.Projects.Item2</a
-              >
-            </div>
-          </li>
-
-          <a
-            (click)="isForFamiliesCollapsed = !isForFamiliesCollapsed"
-            class="Hidden-desktop Header-menuMobile"
-          >
-            <p class="Header-menuItem" translate>
-              Header.Families.Text<span class="caret"></span>
-            </p>
-          </a>
-          <div
-            [collapse]="isForFamiliesCollapsed"
-            class="multi-collapse"
-            data-toggle="collapse"
-            data-target=".multi-collapse.in, .navbar-collapse.in"
-          >
-            <a
-              routerLink="/eligibility-criteria"
-              class="Header-subMenuMobile"
-              translate
-              >Header.Families.Item1</a
-            >
-            <a routerLink="/how-it-works" class="Header-subMenuMobile" translate
-              >Header.Families.Item2</a
-            >
-            <a
-              routerLink="/privacy-and-your-data"
-              class="Header-subMenuMobile"
-              translate
-              >Header.Families.Item3</a
-            >
-            <a
-              routerLink="/for-your-physician"
-              class="Header-subMenuMobile"
-              translate
-              >Header.Families.Item4</a
-            >
-          </div>
-
-          <a
-            (click)="isForResearchersCollapsed = !isForResearchersCollapsed"
-            class="Hidden-desktop Header-menuMobile"
-          >
-            <p class="Header-menuItem" translate>
-              Header.Researchers.Text<span class="caret"></span>
-            </p>
-          </a>
-          <div
-            [collapse]="isForResearchersCollapsed"
-            class="multi-collapse"
-            data-toggle="collapse"
-            data-target=".multi-collapse.in, .navbar-collapse.in"
-          >
-            <a routerLink="/data-sharing" class="Header-subMenuMobile" translate
-              >Header.Researchers.Item1</a
-            >
-          </div>
-
-          <a
-            (click)="
-              isSpecialtyProjectsCollapsed = !isSpecialtyProjectsCollapsed
-            "
-            class="Hidden-desktop Header-menuMobile"
-          >
-            <p class="Header-menuItem" translate>
-              Header.Projects.Text<span class="caret"></span>
-            </p>
-          </a>
-          <div
-            [collapse]="isSpecialtyProjectsCollapsed"
-            class="multi-collapse"
-            data-toggle="collapse"
-            data-target=".multi-collapse.in, .navbar-collapse.in"
-          >
-            <a
-              routerLink="/limb-girdle-muscular-dystrophy"
-              class="Header-subMenuMobile"
-              translate
-              >Header.Projects.Item1</a
-            >
-            <a routerLink="/craniofacial" class="Header-subMenuMobile" translate
-              >Header.Projects.Item2</a
-            >
-          </div>
-
-          <li data-target=".navbar-collapse.in" data-toggle="collapse">
-            <a
-              routerLink="/about-us"
-              class="Header-menuItem Header-menuAllSizes"
-              translate
-              >Header.AboutUs</a
-            >
-          </li>
-          <li data-target=".navbar-collapse.in" data-toggle="collapse">
-            <a
-              routerLink="/faq"
-              class="Header-menuItem Header-menuAllSizes"
-              translate
-              >Header.FAQs</a
-            >
-          </li>
-          <li
-            *ngIf="isAuthenticated"
-            data-target=".navbar-collapse.in"
-            data-toggle="collapse"
-          >
-            <a
-              routerLink="/dashboard"
-              class="Header-menuItem Header-menuAllSizes"
-              translate
-              >Header.Dashboard</a
-            >
-          </li>
-          <li data-target=".navbar-collapse.in" data-toggle="collapse">
-            <a
-              routerLink="/how-it-works"
-              class="Header-menuItem Header-menuAllSizes Orange-link"
-              translate
-              >Header.GetStarted</a
-            >
-            <ddp-sign-in-out
-              class="Header-menuItem Header-menuAllSizes Sign-in"
-            ></ddp-sign-in-out>
-          </li>
-        </div>
-      </ul>
-    </nav>
-  </header>
-</div> -->
-
 <div class="header-container">
   <app-page-banner></app-page-banner>
 
-  <header class="app-header">
-    <a class="app-header__logo" [routerLink]="Routes.Home"></a>
+  <header
+    class="app-header"
+    [class.app-header--white]="isHeaderWhite"
+    (click)="$event.stopPropagation()"
+  >
+    <a
+      class="app-header__logo"
+      [class.app-header__logo--white]="isHeaderWhite"
+      [routerLink]="Routes.Home"
+    ></a>
 
-    <button class="app-header__toggle" (click)="onToggleClick($event)">
+    <button
+      class="app-header__toggle"
+      [class.app-header__toggle--white]="isHeaderWhite"
+      (click)="onToggleClick($event)"
+    >
       <div class="bar"></div>
       <div class="bar"></div>
       <div class="bar"></div>
@@ -240,6 +31,7 @@
           <div class="nav-control">
             <button
               class="nav-control__button"
+              [class.nav-control__button--white]="isHeaderWhite"
               (click)="onDropdownClick($event, 'families')"
             >
               {{ 'Header.Families.Text' | translate }}
@@ -280,6 +72,7 @@
           <div class="nav-control">
             <button
               class="nav-control__button"
+              [class.nav-control__button--white]="isHeaderWhite"
               (click)="onDropdownClick($event, 'researchers')"
             >
               {{ 'Header.Researchers.Text' | translate }}
@@ -298,6 +91,7 @@
           <div class="nav-control">
             <button
               class="nav-control__button"
+              [class.nav-control__button--white]="isHeaderWhite"
               (click)="onDropdownClick($event, 'projects')"
             >
               {{ 'Header.Projects.Text' | translate }}
@@ -318,7 +112,11 @@
 
         <li class="nav-list__item">
           <div class="nav-control">
-            <a class="nav-control__button pm" [routerLink]="Routes.AboutUs">
+            <a
+              class="nav-control__button pm"
+              [class.nav-control__button--white]="isHeaderWhite"
+              [routerLink]="Routes.AboutUs"
+            >
               {{ 'Header.AboutUs' | translate }}
             </a>
           </div>
@@ -326,7 +124,11 @@
 
         <li class="nav-list__item">
           <div class="nav-control">
-            <a class="nav-control__button pm" [routerLink]="Routes.Faq">
+            <a
+              class="nav-control__button pm"
+              [class.nav-control__button--white]="isHeaderWhite"
+              [routerLink]="Routes.Faq"
+            >
               {{ 'Header.FAQs' | translate }}
             </a>
           </div>
@@ -334,7 +136,11 @@
 
         <li *ngIf="isAuthenticated" class="nav-list__item">
           <div class="nav-control">
-            <a class="nav-control__button" [routerLink]="Routes.Dashboard">
+            <a
+              class="nav-control__button"
+              [class.nav-control__button--white]="isHeaderWhite"
+              [routerLink]="Routes.Dashboard"
+            >
               {{ 'Header.Dashboard' | translate }}
             </a>
           </div>
@@ -342,21 +148,27 @@
 
         <li class="nav-list__item">
           <div class="nav-control">
-            <ddp-language-selector></ddp-language-selector>
+            <ddp-language-selector
+              [class.nav-control__button--white]="isHeaderWhite"
+            ></ddp-language-selector>
           </div>
         </li>
 
-        <li class="nav-list__item">
+        <li *ngIf="!isAuthenticated" class="nav-list__item">
           <div class="nav-control">
             <a
               class="nav-control__button pm get-started-link"
+              [class.get-started-link--orange]="isHeaderWhite"
               [routerLink]="Routes.HowItWorks"
             >
               {{ 'Header.GetStarted' | translate }}
             </a>
           </div>
 
-          <div class="get-started-auth only-desktop">
+          <div
+            class="get-started-auth only-desktop"
+            [class.get-started-auth--white]="isHeaderWhite"
+          >
             <ddp-sign-in-out></ddp-sign-in-out>
           </div>
         </li>
