--- a/ddp-workspace/projects/ddp-rgp/src/styles.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles.scss
@@ -1843,6 +1843,12 @@ mat-icon.ddp-dropdown-arrow {
     overflow: hidden;
 }
 
+.only-desktop ddp-sign-in-out .SimpleButton {
+    @media only screen and (max-width: 1024px) {
+        font-size: 0.9rem;
+    }
+}
+
 /**
  * Language selector
  */
@@ -1889,6 +1895,33 @@ mat-icon.ddp-dropdown-arrow {
             .ddp-current-language {
                 margin: 0 4px;
             }
+        }
+    }
+}
+
+.language-menu {
+    min-height: 0 !important;
+
+    border: 1px solid rgba(0, 0, 0, 0.15) !important;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2) !important;
+    border-radius: 0 !important;
+
+    .mat-menu-content {
+        padding: 5px 0 !important;
+
+        .mat-menu-item {
+            display: flex;
+            align-items: center;
+
+            height: auto !important;
+
+            white-space: nowrap;
+            font-family: inherit;
+            font-size: 0.95rem;
+            line-height: 1.42857143 !important;
+            color: #000;
+
+            padding: 10px 20px;
         }
     }
 }
