--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/progress-indicator/progress-indicator.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/progress-indicator/progress-indicator.component.html
@@ -23,7 +23,7 @@
             <button mat-stroked-button
                     *ngIf="isLastStep"
                     (click)="finish()"
-                    class="button right">{{'SDK.FinishButton' | translate}}
+                    class="button right finish">{{'SDK.FinishButton' | translate}}
             </button>
         </div>
     </mat-step>
