Improve "add-siblings" button

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activity-block/activity-block.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activity-block/activity-block.component.html
@@ -7,5 +7,8 @@
         </div>
     </div>
 
-    <button *ngIf="block.allowMultiple" mat-flat color="primary">{{block.addButtonText}}</button>
+    <button *ngIf="block.allowMultiple" mat-flat class="add-btn button button_primary">
+        <img lazy-resource src="assets/shared/add-person.svg" class="icon" [alt]="block.addButtonText">
+        <span class="text">{{block.addButtonText}}</span>
+    </button>
 </div>
