--- a/ddp-workspace/projects/ddp-osteo/src/styles/activity.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles/activity.scss
@@ -214,7 +214,7 @@
 
 // consent agree question
 .consent-agree {
-    margin: 0rem 0 -1.5rem 0;
+    margin: 0 0 -1.5rem 0;
 }
 
 // question text
@@ -346,6 +346,23 @@ ddp-activity-composite-answer {
     .mat-form-field {
         width: 100%;
     }
+
+    .mat-form-field-type-mat-native-select .mat-input-element {
+        padding-left: 5px;
+    }
+
+    .ddp-answer-container {
+        align-items: center;
+
+        .ddp-answer-field {
+            margin-right: 1.5rem;
+            flex-grow: 1;
+        }
+
+        .ddp-answer-field:last-child {
+            margin-right: 0;
+        }
+    }
 }
 
 .ddp-composite-text {
@@ -357,6 +374,11 @@ ddp-activity-composite-answer {
     .ddp-answer-container {
         display: flex !important;
         flex-direction: column !important;
+        align-items: initial !important;
+
+        .ddp-answer-field {
+            margin-right: 0 !important;
+        }
     }
 
     .ddp-date-field-margin:first-child,
