RGP: Eligibility criteria page fixes

--- a/ddp-workspace/projects/ddp-rgp/src/app/components/eligibility-criteria/eligibility-criteria.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/eligibility-criteria/eligibility-criteria.component.html
@@ -1,16 +1,10 @@
-<div class="FullWidth">
-  <div class="Landing-imageContainer Eligibility-imageContainer">
-    <div class="Landing-image Landing-imageEligibility" role="img"></div>
-  </div>
-</div>
+<div class="ec">
+  <header class="ec__header">
+    <div class="ec__header-img" role="img"></div>
+  </header>
 
-<div class="PageHeader-background Background--blue alt">
-  <div class="PageLayout">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <h1 class="PageHeader-title" translate>EligibilityPage.Title</h1>
-      </div>
-    </div>
+  <div class="ec__title-container">
+    <h1 class="ec__title">{{ 'EligibilityPage.Title' | translate }}</h1>
   </div>
 </div>
 
