--- a/ddp-workspace/projects/ddp-rgp/src/styles.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles.scss
@@ -968,6 +968,10 @@ td .mat-input-wrapper {
 
 .PageContent-imageStep {
     border-bottom: 7px solid #E8702A;
+
+    &--no-border {
+        border-bottom: none;
+    }
 }
 
 .Panel {
