--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/modal-activity-block/modal-activity-block.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/modal-activity-block/modal-activity-block.component.html
@@ -1,56 +1,34 @@
-<mat-card class="modal-activity-block__card">
+<mat-card *ngFor="let instance of block.instances" class="modal-activity-block__card">
   <mat-card-content class="modal-activity-block__card-content">
     <div>
       <mat-card-title class="modal-activity-block__card-title">
-        {{activityInstance?.activityName}}
+        {{instance.activityName}}
       </mat-card-title>
-      <mat-card-subtitle *ngIf="activityInstance?.activityDescription"
+      <mat-card-subtitle *ngIf="instance.activityDescription"
                          class="modal-activity-block__card-subtitle">
-        {{activityInstance.activityDescription}}
+        {{instance.activityDescription}}
       </mat-card-subtitle>
 
-      <div *ngIf="activityInstance?.statusCode !== 'CREATED'"
+      <div *ngIf="instance.statusCode !== 'CREATED'"
            class="modal-activity-block__success-message">
         <mat-icon inline>check_circle</mat-icon>
-        <span>{{activityInstance?.numQuestionsAnswered}} questions answered</span>
+        <span>{{instance.numQuestionsAnswered}} questions answered</span>
       </div>
     </div>
 
     <mat-card-actions class="modal-activity-block__card-buttons">
       <button mat-mini-fab
-              *ngIf="!activityInstance?.readonly"
+              *ngIf="!instance.readonly"
               class="button_primary"
-              (click)="openEditDialog()">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-             viewBox="0 0 32 32" width="32px" height="32px">
-          <g stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" fill="none"
-             fill-rule="evenodd" transform="translate(6, 3)">
-            <path
-              d="M18.9426829,1.54512195 C18.3553294,0.960271379 17.5586034,0.634405059 16.7297471,0.639944989 C15.9008907,0.645627485 15.1086496,0.982250836 14.5292683,1.575 L2.15121951,13.9530488 L0.640243902,19.847561 L6.5347561,18.3357317 L18.9128049,5.95768293 C19.5057143,5.37856338 19.8424647,4.58642216 19.8481478,3.75763414 C19.8536884,2.92884611 19.5276958,2.13221737 18.9426829,1.54512195 Z"></path>
-            <line x1="14.1758537" y1="1.92926829" x2="18.5585366" y2="6.31195122"></line>
-            <line x1="2.15207317" y1="13.9521951" x2="6.53902439" y2="18.3314634"></line>
-          </g>
-        </svg>
+              (click)="openEditDialog(instance)">
+        <img src="assets/images/pencil.svg" alt="Edit">
       </button>
       <button mat-mini-fab
-              *ngIf="activityInstance?.canDelete"
+              *ngIf="instance.canDelete"
               #delete_button
               class="button_secondary"
-              (click)="openDeleteDialog()">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-             width="32px" height="32px" viewBox="0 0 32 32">
-          <g stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" fill="none"
-             fill-rule="evenodd" transform="translate(6, 1)">
-            <polygon
-              points="18.5862069 22.3793103 3.4137931 22.3793103 3.4137931 3.4137931 18.5862069 3.4137931"></polygon>
-            <polygon
-              points="14.7931034 3.4137931 7.20689655 3.4137931 7.20689655 0.379310345 14.7931034 0.379310345"></polygon>
-            <line x1="0.379310345" y1="3.4137931" x2="21.6206897" y2="3.4137931"></line>
-            <line x1="7.20689655" y1="7.5862069" x2="7.20689655" y2="18.2068966"></line>
-            <line x1="11" y1="7.5862069" x2="11" y2="18.2068966"></line>
-            <line x1="14.7931034" y1="7.5862069" x2="14.7931034" y2="18.2068966"></line>
-          </g>
-        </svg>
+              (click)="openDeleteDialog(instance)">
+        <img src="assets/images/trash.svg" alt="Delete">
       </button>
     </mat-card-actions>
   </mat-card-content>
@@ -58,16 +36,17 @@
 
 <ng-template #edit_dialog>
   <div mat-dialog-title class="modal-activity-block__edit-dialog-title">
-    <div>{{activityInstance?.activityName}}</div>
+    <div>{{currentActivityInstance?.activityName}}</div>
     <button mat-icon-button mat-dialog-close class="modal-activity-block__close-button">
       <mat-icon>close</mat-icon>
     </button>
   </div>
   <mat-dialog-content class="modal-activity-block__edit-dialog-content">
     <ddp-activity-section [section]="activityForm?.sections[0]"
-                          [readonly]="activityForm?.readonly"
+                          [readonly]="readonly"
                           [studyGuid]="studyGuid"
                           [activityGuid]="activityGuid"
+                          [validationRequested]="validationRequested"
     ></ddp-activity-section>
 
     <button mat-flat-button
